<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jihon.cst2335_final_project.QuizCreator">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfquestion_text"
        android:hint="@string/add_question"
        android:background="@android:color/holo_blue_light"
        android:padding="6dp"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/tfcorectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_light"
        android:hint="@string/correct_answer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/edittfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/edit_button" />


        <Button
            android:id="@+id/closetfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/close_button" />

        <Button
            android:id="@+id/deletetfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/delete_button" />

    </LinearLayout>

</LinearLayout>

