<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jihon.cst2335_final_project.QuizCreator">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcQuestion"
        android:hint="@string/add_question"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:background="@android:color/holo_blue_light"
        android:padding="6dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcChoice1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:hint="@string/answer_1"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcChoice2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:hint="@string/answer_2"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_orange_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcChoice3"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:hint="@string/answer_3"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcChoice4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:hint="@string/answer_4"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_light" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mcAnswer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:hint="@string/correct_answer"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/addMCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="34dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/add_question" />


        <Button
            android:id="@+id/cancelMCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/addMCButton"
            android:layout_alignBottom="@+id/addMCButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="83dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/cancel_button" />

    </RelativeLayout>

</LinearLayout>



