<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jihon.cst2335_final_project.QuizCreator">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numQuestion"
        android:hint="@string/add_question"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:background="@android:color/holo_blue_light"
        android:padding="6dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numchoice1"
        android:hint="@string/answer_1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/num_answer"
        android:hint="@string/correct_answer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_light" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/addNUButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_orange_light"
            android:text="@string/add_question" />


        <Button
            android:id="@+id/cancelNUButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/cancel_button" />

    </RelativeLayout>

</LinearLayout>



